--- a/env.example
+++ b/env.example
@@ -64,8 +64,16 @@ FLASK_EXTERNAL_URL=https://your-flask-server.com
 # TELEGRAM БОТ
 # =============================================================================
 
-# Токен Telegram бота (получить у @BotFather: https://t.me/BotFather)
+# Токен основного Telegram бота (получить у @BotFather: https://t.me/BotFather)
+# Используется для автоматической выдачи токенов
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
+
+# Токен публичного Telegram бота (второй бот для публичного использования)
+# Показывает оферту и приглашает написать в личку
+TELEGRAM_BOT_TOKEN_PUBLIC=0987654321:ZYXwvuTSRqpONMLkjiHGFedcBA
+
+# Ваш Telegram username для связи с пользователями
+OWNER_TELEGRAM=@lavrovartem
 
 # URL для webhook (HTTPS обязателен в production!)
 # Формат: https://yourdomain.com/telegram/webhook/
