Генерация по шагам, отображение изображений, таймауты и правки
Генерация:
- Пошаговый вывод: сначала только текст (сразу показ), затем отдельный
  запрос за изображением с блоком «Генерация изображения...» и спиннером
- Таймауты: fetch 2 мин (текст) / 5 мин (изображение), nginx proxy 5 мин
- Экранирование текста в блоке результата (XSS)

Изображения:
- Абсолютные URL (build_absolute_uri) для отдачи после деплоя
- При перегенерации — новое изображение добавляется ниже предыдущих
- Фильтр media_urls_absolute для стены, детали поста и подтверждения удаления
- Nginx: убрана проверка Referer для /media/ — картинки отображаются и скачиваются

Тарифы и лимиты:
- Редирект на openai-limit-exceeded только при openai_tokens_limit > 0
- Учёт токенов только для публичных тарифов; UNLIMITED не считает GigaChat

Прочее:
- CSP: разрешены fonts.googleapis.com и fonts.gstatic.com
- Профиль: читаемый блок «Лимиты токенов» в киберпанк-теме
- Убран отладочный вывод в gigachat_api и views (типы, base64)

--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -41,11 +41,11 @@ http {
     proxy_max_temp_file_size 2048m;
     proxy_temp_file_write_size 32k;
 
-    # Таймауты
-    proxy_connect_timeout 60s;
-    proxy_send_timeout 60s;
-    proxy_read_timeout 60s;
-    send_timeout 60s;
+    # Таймауты (генерация текста+изображения может занимать до 5 минут)
+    proxy_connect_timeout 120s;
+    proxy_send_timeout 300s;
+    proxy_read_timeout 300s;
+    send_timeout 300s;
 
     # Gzip сжатие
     gzip on;
@@ -133,12 +133,6 @@ http {
             expires 7d;
             add_header Cache-Control "public";
             access_log off;
-            
-            # Защита от hotlinking
-            valid_referers none blocked server_names;
-            if ($invalid_referer) {
-                return 403;
-            }
         }
 
         # Telegram Webhook - специальный rate limit
